# selu

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  DOCS_IMPACT.yaml  Dockerfile  Dockerfile.updater  LICENSE  MEMORY.md  README.md  SETUP.md  agents.json  future-ideas.md  identity.md  identity_and_design.html  identity_and_design.md  marketplace_rating.md  push.md
crates/pap-bluebubbles/: Cargo.toml
crates/pap-bluebubbles/src/: main.rs
crates/selu-core/: Cargo.toml
crates/selu-core/src/: error.rs  types.rs
crates/selu-orchestrator/: Cargo.toml  build.rs
crates/selu-orchestrator/.sqlx/: query-0560e1136f377f508ad0e8b4438d97517f47e0decbf53da8fb63b4b85e1f4bb5.json  query-0ce1c27a2fa4006f39570cc1225139bffc89ffd9d13a5862a54abe3fe0b31bed.json  query-0e31e991e482c22343f3c5ac830f7356274445bb13b2774211f85c34694c9f71.json  query-1479bc7314e323e72375ccd4cc18e07572e357ee7a5abf43a105ba5c0901d630.json  query-15e01975423eeca9b8e0cac7587319e167b816f57ae0e51136ce16baf744e1c3.json  query-18a308b17069bcbcdcf4ffd338de0f44a35181b22b25870d68172b01954cc8d9.json  query-1a8ff731ed21d88a5dd2aa7453d735a8e4649aa477306308785e29b2191a4760.json  query-2435ca557a781fc1497a74acc1aee33133c48a00469658a479717a82799b7f5d.json  query-2933cca682d3ac55a5d41b4bafbb43d25feba35b837c87222bad0e983468b029.json  query-2953fd3fcda085a6abef2729a43542f86ff1496b8aa395233127d67009eb5bb3.json  query-2e22aaabb87941969dc26cf719e27d965dfde804691aea86785a3efe0ba28f42.json  query-2f12541a6b99acf6d9e8f7ad13438df4ab92edcbfa01f38930aae63f1554b534.json  query-322911f4f6cc0676c03c80fd6fbee1aa566edd7a46d9435bf0647dd7682c2981.json  query-3252fd02537a6732d266a732f19a0b5722764b90cac8947343faed69a17007b3.json  query-43d36b565bd684198dfb4e608815d075a67b70de15b49759e75012f06bcd47c8.json  query-46e6f0dd30ec9f15a2abfb5e2fd7f365fb78e50e78323162a47939e1223f6178.json  query-4b274a7c56a14c97a7e99850cb01c31f07f3f1e0aa99af9f9d96531592b13f33.json  query-5b235599270162dbdb06bba9db51c9f030c6ad4cef17b3f1288dbf8a5f5e1ff6.json  query-6137640c8cb18c7ba0b1b5a46fd8fba72b7cd50cf91d8f03482c5b3fe04c66b5.json  query-668bcf4b111541a6bf4ce01822efc935bd9355938de10775640e67c75dc76840.json  query-67c320baf0b53dfc622b911adbcafe31677b6da02b5d5676ce90336b63f56dfe.json  query-6908320fe459f528df56f3aa9c325301a9471a6579487d3d230477a51a8a9cd8.json  query-6b278432dcc1383f5dea53229adcf57f486bdc2dc9c278d065678a15eee2d038.json  query-6c88934fad7a1c6c7ad72ee56d12f808987acbc8846799d2cd5ba15e76a18b61.json  query-6f3bc41043bc9ae4252cd09654d1b87fc637f29bdec547066984a20da75d294f.json  query-71146b0dcc8dcc59e609417e111b4cf16860c9189f9e3edfa49a05ce3dfe871f.json  query-7162ba0a700b699beda87c13e4b7e151249544eadec549c9dae2d7e37fe57793.json  query-7b838af84288a1d66e4c5f9c42c3add2a01aaffbe0ba3b8da55bda6031d53956.json  query-7e858d652e6b9fd32edb559ab56e031752a556916623706c800293d2b76c942d.json  query-83127492aeb2ddab39425523e91511a8e0d2dd94f6400069f9fa0209c97f001e.json  query-8b6a59e6508fbd9e7d9dee66aa79806e2edcb49e85c7f4d474d661d8cb792a5d.json  query-8d0b92c88d1d61c2436eb00fef977e1bc7cf67b2e786019325ec961de6daafe4.json  query-8e6dfe20797acdf388a71b5ebe1bb378a555fcce3409332201f7da3a5e6836aa.json  query-95e02f0425c557496ee94d78dfa7c6afe0956e6871823f22163fe4416a1a4114.json  query-9e161b5634b7c4fee375e2c55415fe848b620dd74f4619139e7df037cdc11cc0.json  query-9e9b0e61a2c91f8e05a4b1bf3f7f6a655a91d5df621afd99b4bed454933e0fa8.json  query-a59810454428970c62b94a98742b8984bf6a1fc625fa8d426ce1df3d0362ec5e.json  query-ad38678799869f3a4cc5f5b8a14c617e69f2a08ad741f5d5395321ec3324b767.json  query-b31331377822fbe3213805ff313028bcf75d70fead97a804b4118743421ecd4f.json  query-b61532822cb8c5df07c1c83ba7d236201aa3b67fec9b770cc4ddcd7957fcd776.json  (+19 more)
crates/selu-orchestrator/migrations/: 0001_initial.sql  0002_indexes_and_fixes.sql  0003_message_embeddings.sql  0004_threads_sender_refs_bluebubbles.sql  0006_thread_evolution.sql  0007_tool_policies.sql  0008_egress_log.sql  0009_personality.sql  0010_tool_policies_agent_scope.sql  0011_admin_flag.sql  0012_global_tool_policies.sql  0013_thread_reply_guids_and_user_language.sql  0014_bluebubbles_webhook.sql  0015_agent_auto_update.sql  0016_instance_id.sql  0017_telegram_configs.sql  0018_agent_storage.sql  0019_schedules.sql  0020_one_shot_schedules.sql  0021_dynamic_tool_discovery.sql  0022_workspace_activity.sql  0023_agent_bm25_memory.sql  0024_schedules_agent_pin.sql  0025_system_updates.sql  0026_system_update_state_machine.sql  0027_system_update_jobs.sql  0028_system_update_release_metadata.sql  0029_relax_release_channel_constraint.sql  0030_system_update_changelog_body.sql  0031_user_agent_access.sql  0032_whatsapp_configs.sql  0033_user_network_policies.sql  0034_agent_tool_loop_limits.sql  0035_public_origin_setting.sql  0036_installation_telemetry_opt_out.sql  0037_thread_agent_sessions.sql  0038_autonomy_runtime_settings.sql  0039_autonomy_preset_rebalance.sql  0040_medium_autonomy_hops_increase.sql  0041_delegate_policy_default_allow_backfill.sql  (+18 more)
crates/selu-orchestrator/proto/: capability.proto
crates/selu-orchestrator/src/: admin.rs  i18n.rs  main.rs  state.rs  telemetry.rs
crates/selu-orchestrator/templates/: agents.html  agents_detail.html  agents_setup.html  agents_update.html  chat.html  (+27 more)
crates/selu-updater/: Cargo.toml
(+377 files in other folders)
