[workspace]
members = [
    "crates/selu-core",
    "crates/selu-orchestrator",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Jan Thewes"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "uuid"] }

# gRPC
tonic = { version = "0.13", features = ["transport"] }
prost = "0.13"

# Docker API
bollard = "0.18"

# Crypto / security
ring = "0.17"
base64 = "0.22"

# HTTP client (for outbound webhook calls + LLM APIs)
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
eventsource-stream = "0.2"

# Templating
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

# Config
config = "0.15"
dotenvy = "0.15"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
serde_yaml = "0.9"
urlencoding = "2"

# Password hashing
argon2 = "0.5"

# CEL filter evaluation
cel-interpreter = "0.8"

# Time (for cookie max_age)
time = "0.3"

# Archive handling (agent marketplace)
flate2 = "1"
tar = "0.4"
