[package]
name = "selu-updater"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
config = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
